--- a/about.qmd
+++ b/about.qmd
@@ -3,9 +3,9 @@ title: "A bit about me professionally and personally"
 subtitle: ""
 ---
 
-## {{< fa bacteria >}} Professionally
+## {{< fa code >}} Currently
 
-I'm a recent graduate fron the Masters of Environmental Data Science program at the Bren School at the University of California, Santa Barbara. My [masters project](https://bren.ucsb.edu/projects/identifying-priority-survey-sites-early-season-milkweed-conservation) focused on identifying high-priority survey sites for milkweed conservation in the Los Padres National Forest for the Santa Barbara Botanic Garden. I am currently an Arnhold Environmental Graduate Fellow working with the [emLab](https://emlab.ucsb.edu/) and Conservation International, focusing on elephant habitat connectivity under climate change and land cover shifts. 
+I am currently an intern with the USDA USFS with support from the Conference on Asian Pacific American Leadership. In this role I am working to further environmental equity in K-12 public schools in California through tree cover mapping and remote sensing. Additionally, I am continuing my role as an Arnhold Environmental Graduate Fellow, working with the [emLab](https://emlab.ucsb.edu/) and Conservation International, focusing on elephant habitat connectivity under climate change and land cover shifts.
 
 :::{.column-margin}
 ```{r}
@@ -16,6 +16,11 @@ knitr::include_graphics("images/greenhouse.jpg")
 Watering research *Acmispon* plants in the SMCM greenhouse!
 :::
 :::
+
+
+## {{< fa bacteria >}} Previously
+
+In June 2024, I graduated from the Masters of Environmental Data Science program at the Bren School at the University of California, Santa Barbara. My [masters project](https://bren.ucsb.edu/projects/identifying-priority-survey-sites-early-season-milkweed-conservation) focused on identifying [high-priority survey sites](https://sarah-cusser.shinyapps.io/milkweed-site-finder) for milkweed conservation in the Los Padres National Forest for the Santa Barbara Botanic Garden.
 
 Previously, I completed my undergraduate degrees in Biology and Environmental Studies (+ French Minor) at St. Mary's College of Maryland (SMCM) where I had two main areas of focus: plant sciences and coastal ecology. I conducted research on salinity effects on plant-microbe interactions in a [plant ecology lab](https://ltorresmartinez.com/) where I was also the lab manager. My undergraduate thesis examined coastal wave mitigation by constructed oyster reefs using DIY wave gauges. I continued on with submerged aquatic vegetation research with my same [thesis advisor](https://gurbisz-coastal-ecology.netlify.app/). Towards the end of my undergraduate experience, I also discovered my passion for environmental data science and GIS. 
 
