--- a/index.qmd
+++ b/index.qmd
@@ -29,6 +29,6 @@ University of California Santa Barbara (2024)
 **B.S. Biology and B.A. Environmental Studies, Minor in French** <br>
 St. Mary's College of Maryland (2023)
 
-## Experience
+## Current Work
 **School Campus Tree Study Intern** - *US Forest Service* | June 2024 - Present  
 **Arnhold Environmental Graduate Fellow** - *emLab* | October 2023 - Present
