--- a/index.qmd
+++ b/index.qmd
@@ -23,12 +23,11 @@ My name is Sam and I am an Environmental Data Scientist and Interdisciplinary Ec
 
 ## Education
 
-**Master of Environmental Data Science (MEDS)** <br>
+**Master of Environmental Data Science** <br>
 University of California Santa Barbara (2024)
 
 **B.S. Biology and B.A. Environmental Studies, Minor in French** <br>
 St. Mary's College of Maryland (2023)
 
 ## Current Work
-**School Campus Tree Study Intern** - *US Forest Service* | June 2024 - Present  
-**Arnhold Environmental Graduate Fellow** - *emLab* | October 2023 - Present
+**Associate Ecological Consultant** at Ramboll | October 2024 - Present
