update about and inat map

--- a/about.qmd
+++ b/about.qmd
@@ -5,7 +5,7 @@ subtitle: ""
 
 ## {{< fa code >}} Currently
 
-I am currently based in Seattle, WA as an Associate Consultant for the ecology and biodiversity team at [Ramboll](https://www.ramboll.com/en-us/environmental-nature-based-services/biodiversity-and-nature). My work focuses on evaluating and promoting biodiversity, land rehabilitation, nature-based solutions, and furthering positive environmental interactions. In this role, I have been able to work on a variety of projects, utilizing my data analysis, visualization, GIS, and communication skills. I am excited to continue to grow in this role and contribute to these important ecological projects!
+I am currently based in Seattle, WA as an Associate Consultant for the ecology and biodiversity team at [Ramboll](https://www.ramboll.com/en-us/environmental-nature-based-services/biodiversity-and-nature). My work focuses on evaluating and promoting biodiversity, land rehabilitation, nature-based solutions, and furthering positive human-environmental interactions. In this role, I have been able to work on a variety of projects, utilizing my data analysis, visualization, GIS, and science communication skills. I am excited to continue to grow in this role and contribute to these important ecological projects!
 
 :::{.column-margin}
 ```{r}
@@ -22,7 +22,7 @@ Watering research *Acmispon* plants in the SMCM greenhouse!
 
 In June 2024, I graduated from the Masters of Environmental Data Science program at the Bren School at the University of California, Santa Barbara. My [masters project](https://bren.ucsb.edu/projects/identifying-priority-survey-sites-early-season-milkweed-conservation) focused on identifying [high-priority survey sites](https://sarah-cusser.shinyapps.io/milkweed-site-finder) for milkweed conservation in the Los Padres National Forest for the Santa Barbara Botanic Garden.
 
-After graduating, I continued my role as an Arnhold Environmental Graduate Fellow, working with the [emLab](https://emlab.ucsb.edu/) and Conservation International's [Spatial Planning for Climate Change](https://www.ci-sparcle.org/) initiative, focusing on African Elephant habitat connectivity under climate change and land cover shifts. Additionally, I worked with the USDA USFS with support from the Conference on Asian Pacific American Leadership. In this role I am worked to further environmental equity in K-12 public schools in California through land cover image classification modeling using remote sensing data.
+After graduating, I continued my role as an Arnhold Environmental Graduate Fellow, working with the [emLab](https://emlab.ucsb.edu/) and Conservation International's [Spatial Planning for Climate Change](https://emlab.ucsb.edu/projects/spatial-planning-climate-change-land-use-conservation-agriculture-and-energy) initiative, focusing on African Elephant habitat connectivity under climate change and land cover shifts. Additionally, I worked with the USDA USFS with support from the Conference on Asian Pacific American Leadership. In this role I am worked to further environmental equity in K-12 public schools in California through land cover image classification modeling using remote sensing data.
 
 Previously, I completed my undergraduate degrees in Biology and Environmental Studies (+ French Minor) at St. Mary's College of Maryland (SMCM) where I had two main areas of focus: plant sciences and coastal ecology. I conducted research on salinity effects on plant-microbe interactions in a [plant ecology lab](https://ltorresmartinez.com/) where I was also the lab manager. My undergraduate thesis examined coastal wave mitigation by constructed oyster reefs using DIY wave gauges. I continued on with submerged aquatic vegetation research with my same [thesis advisor](https://gurbisz-coastal-ecology.netlify.app/). Towards the end of my undergraduate experience, I also discovered my passion for environmental data science and GIS. 
 
@@ -50,5 +50,5 @@ College sailing nationals 2022 at Tulane University.
 :::
 :::
 
-Now that I'm not sailing as much, I have been able to devote more time to other hobbies including running, playing cello, and transcribing/ arranging music. During 2020, I began arranging music for me and my dad (a flautist) to play together. I mainly use the MuseScore4 engraving software and am working on uploading my transcriptions and arrangements to my MuseScore profile - [check it out!](https://musescore.com/user/29095840) 
+Now that I'm not sailing as much, I have been able to devote more time to other hobbies including running, playing cello, and knitting. I play in the Symphony Orchestra with the West Seattle Community Orchestra (WSCO) and I been documenting my knitting projects on Ravelry - [check it out!](https://www.ravelry.com/projects/shmuir) 
 
